[tool.poetry]
name = "GummyFN"
version = "0.0.1"
description = ""
authors = ["Gummy Bear", "Kiko"]

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^20.6.3"
uvloop = "^0.14.0"
aiohttp = "^3.6.2"
crayons = "^0.4.0"
fortnitepy = "^3.3.0"
BenBotAsync = "^2.5.1"
FortniteAPIAsync = "^0.1.6"
aioconsole = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
